--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@ install_github(<span class="pl-s"><span class="pl-pds">"</span>shiyuanhe/varStar
 <a id="usage-example" class="anchor" href="#usage-example" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage example</h2>
 
 <ol>
-<li><a href="./example/example1.html" target="_blank">Fitting a Densely Observed Mira Light Curve</a></li>
+<li><a href="./example/example1.html" target="_blank">Fitting a
+  Densely Observed Mira Light Curve</a></li>
+<li><a href="./example/example2.html" target="_blank">Frequency
+  Estimation for a Sparsely Sampled Mira Light Curve</a></li>  
 </ol>
 
 <h2>
