--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
       </div>
     </header>
 
+      
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
+	<section id="main-content">
+
+	          <h2>
+<a id="r-package" class="anchor" href="#r-package"
+	aria-hidden="true"><span aria-hidden="true" class="octicon
+	octicon-link"></span></a>Citing the code</h2>
+
+	      <p>
+      <a href="https://doi.org/10.5281/zenodo.154628"><img
+      src="https://zenodo.org/badge/DOI/10.5281/zenodo.154628.svg"
+      alt="DOI"></a> </p>
+
           <h2>
 <a id="r-package" class="anchor" href="#r-package" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>R Package</h2>
 
